--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0"
+  },
+  "dependencies": {
+    "bluebird": "^3.5.1",
+    "puppeteer": "^1.2.0"
   }
 }
