--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,7 @@ services:
       - SYS_ADMIN
     environment:
       - CHROME_EXECUTE_PATH=google-chrome-unstable
+  nginx:
+    image: nginx:stable
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
