--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,7 +7,7 @@ server {
   server_name _;
 
   location / {
-    if ($http_x_fowarded_proto = 'http') {
+    if ($http_x_forwarded_proto = 'http') {
       return 301 https://$host$request_uri;
     }
     proxy_set_header X-Real-IP $remote_addr;
