--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bluebird": "^3.5.5",
     "express": "^4.17.1",
+    "helmet": "^3.18.0",
     "morgan": "^1.9.1",
     "puppeteer": "^1.17.0"
   }
