--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon -L --inspect=0.0.0.0:9229 app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "author": "windyakin",
   "license": "MIT",
+  "engines": {
+    "node": ">= 12.0.0"
+  },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint": "^7.12.1",
+    "eslint-plugin-node": "^11.1.0",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
