--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish to Docker Hub
+name: Publish to GitHub Container Registry
 
 on:
   push:
@@ -11,14 +11,18 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Build the Docker Image
-        run: docker build --pull --no-cache . -f Dockerfile --tag windyakin/namahamu-melon:latest
+      - uses: docker/setup-qemu-action@v1
 
-      - name: Login to the Docker Hub
-        env:
-          DOCKER_USERNAME: windyakin
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
+      - uses: docker/setup-buildx-action@v1
 
-      - name: Publish to Docker Hub
-        run: docker push windyakin/namahamu-melon:latest
+      - uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_TOKEN }}
+
+      - uses: docker/build-push-action@v2
+        with:
+          platforms: linux/amd64
+          tags: ghcr.io/windyakin/namahamu-melon:latest
+          push: true
