:green_heart: Maintenance CI
- Add eslint
- Change job name
- Update actions/checkout@v2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,15 @@
-name: Build Docker image
+name: CI
 
 on:
-  push:
-    branches:
-    pull_requests:
+  push: {}
+  pull_request: {}
 
 jobs:
-  dry_run:
+  docker:
+    name: Docker build (dry run)
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
       - uses: docker/setup-qemu-action@v1
 
@@ -20,3 +20,20 @@ jobs:
           platforms: linux/amd64
           tags: ghcr.io/windyakin/namahamu-melon:latest
           push: false
+
+  eslint:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.x]
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - run: npm install
+
+      - run: npm run lint
