--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,10 +6,11 @@ on:
       - master
 
 jobs:
-  build_and_push:
+  docker:
+    name: publish
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
       - uses: docker/setup-qemu-action@v1
 
